source/webapp/sites/all/themes/checkbook3/css/trends.css
/******************************
***   TREND PAGES GENERAL   ***
******************************/

/* header and breadcrumb area */
body.page-trends #section-header,
body.page-featured-trends #section-header,
body.page-all-trends #section-header,
body.page-trends-landing #section-header,
body.page-featuredtrends #section-header{
    margin-bottom: 0px;
}
body.page-trends .breadcrumb,
body.page-featured-trends .breadcrumb,
body.page-all-trends .breadcrumb,
body.page-trends-landing .breadcrumb,
body.page-featuredtrends .breadcrumb{
    margin-left:0px;
}
body.page-trends .breadcrumb .breadcrumb,
body.page-featured-trends .breadcrumb .breadcrumb,
body.page-all-trends .breadcrumb .breadcrumb,
body.page-trends-landing .breadcrumb .breadcrumb,
body.page-featuredtrends .breadcrumb .breadcrumb{
    margin: 0px;
    padding:0px;
}
body.page-trends h1#page-title,
body.page-featured-trends h1#page-title,
body.page-all-trends h1#page-title,
body.page-trends-landing h1#page-title,
body.page-featuredtrends  h1#page-title,
body.page-trends-landing-trends h1#page-titleSpecial{
    margin-top:6px;
    line-height: 42px;
}

/*******************************
***   FEATURED TRENDS PAGE   ***
*******************************/
body.page-featured-trends .highcharts-border{
    margin-left:10px;
    background: url("/sites/all/themes/checkbook/images/nyc_map.png") no-repeat scroll center top transparent;
}
.featured-trends-filter {
    position: absolute;
    right: 0;
    top: 37px;
    z-index: 1;
}
.featured-trends-filter .filter-container {
    background: linear-gradient(to bottom, #FBFBFB 0%, #F9F9F9 5%, #F7F7F7 100%) repeat scroll 0 0 transparent;
    border: 1px solid #ADADAD;
    padding: 5px;
    display:block;
    float:left;
    margin-right:3px;
}
.featured-trends-filter .filter-container input,
.featured-trends-filter .filter-container label{
    font-size: 14px;
    color:#000;
    height: 29px;
    text-align: center;
    float:left;
}
.featured-trends-filter .filter-container label {
    margin: 10px 10px 0px 10px;
    font-size:12px;
    height:auto;
}
.featured-trends-filter img {
    cursor: pointer;
}
.detail-page-links {
    bottom: 20px;
    float: right;
    position: relative;
    text-align: right;
    width: 100%;
}
.detail-page-links a {margin-left: 30px;}
#featured-trends-thumbnails {
    background-color: #E9EEF0;
    float:left;
    clear:both;
    width:100%;
}
#featured-trends-thumbnails .navigation.activeSlide {
    border: 3px solid #1F82C9;
}
#featured-trends-thumbnails .navigation {
    color: #3E576F;
    cursor: pointer;
    display: block;
    float:left;
    height: 113px;
    width: 163px;
    margin: 15px 11px;
    font-size: 11px;
    text-align: center;
    vertical-align: top;
    border:1px solid #767676;
}
#featured-trends-thumbnails #general-fund {
    background: url("/sites/all/themes/checkbook/images/GeneralFund.png") no-repeat scroll left top transparent;
}
#featured-trends-thumbnails #property-tax {
    background: url("/sites/all/themes/checkbook/images/PropertyTax.png") no-repeat scroll left top transparent;
}
#featured-trends-thumbnails #capital-projects {
    background: url("/sites/all/themes/checkbook/images/CapitalProjects.png") no-repeat scroll left top transparent;
}
#featured-trends-thumbnails #personal-income {
    background: url("/sites/all/themes/checkbook/images/PersonalIncome.png") no-repeat scroll left top transparent;
}
#featured-trends-thumbnails #debt-ratio {
    background: url("/sites/all/themes/checkbook/images/RatiosOfDebt.png") no-repeat scroll left top transparent;
}
#featured-trends .pane-content{
    width: 940px;;
}
/**************************
***   ALL TRENDS PAGE   ***
**************************/
.page-all-trends .panel-display.omega-grid.omega-12-onecol,
.page-trends-landing .panel-display.omega-grid.omega-12-onecol{
    margin:auto;
}
#table_355_wrapper{margin-top:20px;}
.page-all-trends h1{margin:10px 0px;}
.page-all-trends #block-system-main .pane-block{
    display:block;
    float: left;
    width: 291px;
    height: 275px;
    margin-bottom: 15px;
    margin-left: 15px;
    overflow: auto;
}
.page-all-trends #block-system-main .pane-block.pane-menu-menu-demographic-trends,
.page-all-trends #block-system-main .pane-block.pane-menu-menu-operational-trends{
    height:auto;
}
.page-all-trends #block-system-main .pane-block h2{
    font-family: 'Roboto';
    font-size:12px;
    margin-bottom:10px;
}
.page-all-trends #block-system-main li{line-height:18px;}

.page-trends #zone-content,
.page-trends-landing #zone-content{
    width:auto;
    float:left;
    clear:both;
}

/****************************
***   TREND TABLE PAGES   ***
****************************/
body.page-trends .dataTables_scrollHead,
body.page-trends-landing .dataTables_scrollHead,
body.page-featuredtrends .dataTables_scrollHead{
    background: #48759d; /* Old browsers */
    background: -moz-linear-gradient(top, #48759d 0%, #3f668f 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #48759d), color-stop(100%, #3f668f)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, #48759d 0%, #3f668f 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, #48759d 0%, #3f668f 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top, #48759d 0%, #3f668f 100%); /* IE10+ */
    background: linear-gradient(to bottom, #48759d 0%, #3f668f 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#48759d', endColorstr = '#3f668f', GradientType = 0); /* IE6-9 */
}
body.page-trends .node-widget h3,
body.page-trends-landing .node-widget h3,
body.page-featuredtrends .node-widget h3{
    display: none;
}
body.page-trends .footnote,
body.page-trends-landing .footnote,
body.page-featuredtrends .footnote{
    line-height:18px;
    color:#000;
    float:left;
    width:940px;
    clear:both;
}
/* ... */

